public/css/tat.css
/* ... */
.login-panel {
	margin-bottom: 0 !important;
	height: 100% !important;
}
#login-col {
	padding-left: 0 !important;
}
#your-travels-header, #wish-list-header {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 20px;
}
#wish-list-body, #your-travels-body {
	margin-bottom: 0;	
}
#name {
	padding-left: 30px;
}
#email {
	padding-left: 30px;
}
#location {
	padding-left: 30px;
}
#handle {
	padding-left: 30px;
}
#password1 {
	padding-left: 30px;
}
#password2 {
	padding-left: 30px;
}
.navbar-nav>a.profile-image {
    padding-top: 10px !important;
    padding-bottom: 10px !important;
}
#profile-dropdown {
	padding-top: 10px;
}
@media (min-width: 768px) {
  .item:nth-child(2n+1) {
    clear: left;
  }
}
#panel_image {
	width: 100%;
	height: 100%;
}
.dropdown-menu .sub-menu {
	visibility: hidden;
}
.dropdown-menu li:hover .submenu {
	visibility: visible
}
.dropdown:hover .dropdown-menu {
	display: block;
}
.dropdown {
	margin-bottom: 5px;
}
#footersaying {
	text-shadow: -1px 0 #ff5800, 0 1px #ff5800, 1px 0 #ff5800, 0 -1px #ff5800; 
	margin-top: 0px;
}
.videos {
	width: 120px;
	text-align: center;
	font-size: 20px;
}
.media {
	padding-top: 67px;
	padding-bottom: 67px;
	color: #ff5800;
	text-shadow: -1px 0 #e7e7e7, 0 1px #e7e7e7, 1px 0 #e7e7e7, 0 -1px #e7e7e7;
	
}
h1 {
	font-size: 50px;
}
.blogs {
	width: 120px;
	text-align: center;
	font-size: 20px;
	color: #ff5800;
}
.dronefootage {
	width: 220px;
	text-align: center;
	font-size: 20px;
}
.photos {
	width: 120px;
	text-align: center;
	font-size: 20px;
}
.nav-tabs > li > a {
    padding-top: 8px;
    padding-bottom: 8px;
    line-height: 20px;
    border: 1px solid transparent;
    -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
    -moz-border-radius-bottomright: 5px;
    -webkit-border-bottom-right-radius: 5px;
    border-bottom-right-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    -webkit-border-bottom-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
.tabs-above {
    position: relative;
    bottom: -24px;
     -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
    -moz-border-radius-topright: 5px;
    -webkit-border-top-right-radius: 5px;
    border-top-right-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -webkit-border-top-left-radius: 5px;
    border-top-left-radius: 5px;
}
footer {
	background-color: #9c9c9c; 
	color: white; 
	border-top: solid #fb6966 2px; 
	text-align: center; 
	padding: 15px 200px 15px 200px;
	position: absolute !important;
	height: 50px;
	bottom: 0 !important;
	left: 0 !important;
	right: 0 !important;
}
#about-footer {
	border-top: solid #1e4be2 2px;
}
#berlin-footer {
	border-top: solid #0a9ef4 2px;
}
#form8 {
	width: 100%;
}
#contact-form {
	padding: 0 10px;
}
.md-form {
	margin-left: 0px !important;
}
.prefix~textarea {
	margin-left: 0px !important;
}
.prefix~input {
	margin-left: 0px !important;
}
#Contact-Header {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 20px;
}
#about-header {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 30px;
}
#about-us {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 25px;
}
#about-body {
	margin-bottom: 0px;
}
#about-panel {
	margin-bottom: 20px;
}
#twain {
	font-family: 'Fresca', sans-serif;
	color: rgb(70, 70, 70);
	font-size: 25px;
	font-style: italic;
	float: right;
}
.modal{
	display: none;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgb(0,0,0);
	background-color: rgba(0,0,0,0.4);
	padding-top: 60px;
}

.modal-content {
	background-color: #fefefe;
	margin: 5px auto;
	border: 1px solid #888;
	width: 45%;
	height: 400px;
	display: block;
}

.close {
	position: relative;
	right: 10px;
	top: 10px;
	color: #000;
	font-size: 20px;
	z-index: 3;
}
#closeIt {
	position: relative;
	right: 25px;
	left: 670px;
	color: #777;
	font-size: 20px;
	z-index: 3;
}
closeIt:hover,
closeIt:focus 
{
	color: #ff5800;
	cursor: pointer;
}
close:hover,
close:focus
{
	color: #ff5800;
	cursor: pointer;
}

.animate {
	-webkit-animation: animatezoom 0.6s;
	animation: animatezoom 0.6s
}

@-webkit-keyframes animatezoom {
	from {-webkit-transform: scale(0)}
	to {transform: scale(1)}
}
@keyframes animatezoom {
	from {transform: scale(0)}
	to {transform: scale(1)}
}

#login-avatar {
	height: 200px;
	width: 200px;
	margin: 10px auto;
}
#window {
	text-align: center;
	display: inline-flex;
	margin-left: 5%;
	margin-right: 5%;	
}
#window2 {
	display: block !important;
	/* text-align: center; */
	display: inline-flex;
	margin-left: 5px;;
	margin-right: 5%;
	margin-top: 10px;
}
.modal-content-login {
	background-color: #fefefe;
	margin: 5px auto;
	border: 1px solid #888;
	width: 40%;
	height: auto;
	display: block;
}
#login-handle {
	width: 25%;
	margin-left: 5px;
	margin-top: 10px;
}
#login-password {
	width: 25%;
	margin-left: 5px;
	margin-top: 10px;
}
#password-label {
	margin-left: 10px;
	padding-top: 10px;
}
#handle-label {
	margin-left: 10px;
	padding-top: 10px;
}
#checkbox {
	margin-top: 10px;
}
#card1 {
	width: 300px;
}
.card-body {
	display: inline !important;
}
#small-berlin {
	width: 50px;
	margin-right: 50px;

}
#small-kyoto {
	margin-top: -155px;
}
#small-hangzhou {
	margin-top: 150px;
}
.card-text {
	font-size: 1.1em !important;
	margin-top: 10px !important;
	margin-bottom: 15px !important;
}
#small-paris {
	margin-top: -30px;
	
}

